--- a/bootMovieRating/package.json
+++ b/bootMovieRating/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^3.4.2",
     "http-proxy-middleware": "^1.0.2",
     "react": "^16.13.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
